Fix misaligned fullscreen editor

--- a/app/assets/stylesheets/admin/components/forms/_markdown_composer.scss
+++ b/app/assets/stylesheets/admin/components/forms/_markdown_composer.scss
@@ -44,7 +44,7 @@
   &.-fullscreen {
 
     display: block;
-    position: absolute;
+    position: fixed;
     z-index: 1000000;
     top: 0;
     left: 0;
